--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Android_Projet</string>
+    <string name="louer">Louer</string>
+    <string name="acheter">Acheter</string>
+    <string name="search">Entrez votre recherche</string>
 </resources>
