--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,15 @@
     <string name="myapp">SABRITER</string>
     <string name="name">name</string>
     <string name="trier">Trier par</string>
+    <string name="nom_d_utilisateur">Nom d\'utilisateur</string>
+    <string name="mot_de_passe">Mot de passe</string>
+    <string name="connexion">Connexion</string>
+    <string name="se_connecter">se connecter</string>
+    <string name="s_inscrire">s\'inscrire</string>
+    <string name="email">email</string>
+    <string name="mes_informations">Mes informations</string>
+    <string name="deconnexion">DECONNEXION</string>
+    <string name="vous_n_avez_pas_de_compte">Vous n\'avez pas de compte ?</string>
 
     <string-array name="tri">
         <item>Plus récent</item>
