--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="connexion">Connexion</string>
     <string name="se_connecter">se connecter</string>
     <string name="s_inscrire">s\'inscrire</string>
-    <string name="email">email</string>
+    <string name="email">Email</string>
     <string name="mes_informations">Mes informations</string>
     <string name="deconnexion">DECONNEXION</string>
     <string name="vous_n_avez_pas_de_compte">Vous n\'avez pas de compte ?</string>
